--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js && webpack --watch",
+    "start": "node server.js",
     "build": "webpack",
     "watch": "webpack --watch"
   },
